# cxauth

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
docs/superpowers/plans/: 2026-04-20-cxauth-bun-typescript-migration.md  2026-04-20-cxauth-direct-usage-status.md  2026-04-20-cxauth-implementation.md  2026-04-20-cxauth-rename-command.md  2026-04-21-cxauth-reset-time-columns.md
docs/superpowers/specs/: 2026-04-20-cxauth-bun-typescript-migration-design.md  2026-04-20-cxauth-design.md
src/: auth.ts  cli.ts  codex.ts  commands.ts  paths.ts  registry.ts  types.ts
src/cxauth/: __init__.py  auth.py  cli.py  codex.py  commands.py  paths.py  registry.py
tests/: __init__.py  auth.test.ts  cli.test.ts  codex.test.ts  commands.test.ts  helpers.py  helpers.ts  registry.test.ts  smoke.test.ts  test_auth.py  test_cli.py  test_codex.py  test_commands.py  test_registry.py  test_smoke.py
